@startuml

title __CONTROLLER's Class Diagram__\n

  namespace ImageHoster {
    namespace controller {
      class ImageHoster.controller.CommentController {
          + addImageComment()
      }
    }
  }
  

  namespace ImageHoster {
    namespace controller {
      class ImageHoster.controller.HomeController {
          + getAllImages()
      }
    }
  }
  

  namespace ImageHoster {
    namespace controller {
      class ImageHoster.controller.ImageController {
          + createImage()
          + deleteImageSubmit()
          + editImage()
          + editImageSubmit()
          + getUserImages()
          + newImage()
          + showImage()
          - convertTagsToString()
          - convertUploadedFileToBase64()
          - findOrCreateTags()
      }
    }
  }
  

  namespace ImageHoster {
    namespace controller {
      class ImageHoster.controller.UserController {
          + login()
          + loginUser()
          + logout()
          + registerUser()
          + registration()
          - checkValidPassword()
      }
    }
  }
  

  ImageHoster.controller.CommentController o-- ImageHoster.service.CommentService : commentService
  ImageHoster.controller.CommentController o-- ImageHoster.service.ImageService : imageService
  ImageHoster.controller.HomeController o-- ImageHoster.service.ImageService : imageService
  ImageHoster.controller.ImageController o-- ImageHoster.service.ImageService : imageService
  ImageHoster.controller.ImageController o-- ImageHoster.service.TagService : tagService
  ImageHoster.controller.UserController o-- ImageHoster.service.ImageService : imageService
  ImageHoster.controller.UserController o-- ImageHoster.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
